...
    }
    else
    {
        UIAlertController *findUserDialog = [UIAlertController alertControllerWithTitle:nil message:@"Type username to search for" preferredStyle:UIAlertControllerStyleAlert];
        
        [findUserDialog addTextFieldWithConfigurationHandler:^(UITextField * _Nonnull textField) {
            textField.placeholder = @"Flickr username";
        }];
        
        UIAlertAction* defaultAction = [UIAlertAction actionWithTitle:@"Search" style:UIAlertActionStyleDefault
                                                              handler:^(UIAlertAction * action) {
                                                                  weakSelf.username = [findUserDialog textFields][0].text;
                                                                  [weakSelf searchFlickrUser];
                                                              }];
        
        UIAlertAction* cancel = [UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleCancel
...
