...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="XHA-6Y-lkp" id="1zu-tU-WKJ"/>
                            <outlet property="delegate" destination="XHA-6Y-lkp" id="1pX-GJ-CJk"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Photos" id="B89-zf-hHb">
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="zX7-E9-A2j">
                            <connections>
                                <action selector="findUser:" destination="XHA-6Y-lkp" id="QVU-pm-MSx"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
